--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Vietnamese Vegan Recipes</title>
     <meta name="description" content="A cookbook of my favourite vegan recipies from Vietnam">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
