--- a/vegan_pho.html
+++ b/vegan_pho.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Simple Vegan Pho Recipe</title>
     <meta name="description" content="An easy to follow vegan pho recipe. Explore Vietnamese cuisine with me.">
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
