added click id to "submit" button in the newsletter form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <form class="subscribe">
         <input type="text" id="fname" name="fname" placeholder="Your Name"><br>
         <input type="email" id="email" name="email" placeholder="Your Email"><br>
-        <input type="submit" value="Subscribe"/>
+        <input type="submit" id="subscribe" value="Subscribe"/>
       </form>
      </div>
     </div>
